--- a/5.1AddingCSS/5.1. Adding CSS/internal.html
+++ b/5.1AddingCSS/5.1. Adding CSS/internal.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Internal</title>
+  <style>
+    h1{
+      color:red;
+    }
+  </style>
 </head>
 
 <body>
