--- a/6.3CSSBoxModel/6.3 CSS Box Model/index.html
+++ b/6.3CSSBoxModel/6.3 CSS Box Model/index.html
@@ -6,6 +6,30 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    div {
+      height: 200px;
+      width: 200px;
+    }
+    p {
+      margin: 0;
+    }
+    #first {
+      background-color: cadetblue;
+      padding: 20px;
+      border: 10px solid black;
+    }
+    #second {
+      background-color: gold;
+      
+      border: solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+    }
+    #third {
+      background-color: indianred;
+      border: 10px solid black;
+      margin-left: 40px;
+    }
 
   </style>
 </head>
@@ -28,6 +52,15 @@ Hint: Use the CSS inspector in Chrome.
 8. Set the 3rd div to have a 10px border 
 9. Set the margins for the divs so that each box corner touches the other. (See the goal image)
 -->
+<div id="first">
+  <p>Hello I am Aryan</p>
+</div>
+<div id="second">
+
+</div>
+<div id="third">
+
+</div>
 
 </body>
 
